src/style/sections/_hero.scss
#hero {
  min-height: 100vh;
  height: 100vh;
  display: flex;
  align-items: center;
  border-bottom: 0px;
  background: $primary-color;
  font-weight: 400;
  color: $dark-blue-text;
  padding: 0rem 5.6rem;
  // margin-top: -7.5rem;
  margin-bottom: 0;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;

  // If you want to set a background image on the hero section, uncomment these with yout custom image

  // background-image: url('../images/isometriccube.gif');
  // background-repeat: no-repeat;
  // background-position: right 15% top 50%;
  // background-size: cover;

  // @include respond(phone) {
  //   padding: 0rem $default-font-size;
  //   background-size: 70%;
  //   background-position: right 50% bottom 10%;
  // }

  .hero-video {
    position: absolute;
    z-index: 1;
  }

  .hero-text-div {
    margin: 0;
    position: absolute;
    z-index: 2;
    top: 50%;

    -ms-transform: translateY(-50%);
    transform: translateY(-50%);

    // @include respond(phone) {
    //   -ms-transform: translateY(-75%);
    //   transform: translateY(-75%);
    // }
  }

  .hero-title {
    font-size: 3.5rem;
    font-weight: 400;
    margin-bottom: 3.2rem;
    text-align: left;

    @include respond(tab-land) {
      font-size: 3.5rem;
    }
    @include respond(tab-port) {
      font-size: 3rem;
      text-align: center;
    }
    @include respond(phone) {
      font-size: 3rem;
      line-height: 1.5;
    }
    @include respond(phone-xs) {
      font-size: 2.8rem;
    }
  }

  .hero-subtitle {
    font-size: 2rem;
    font-weight: 400;
    margin-bottom: 3.2rem;
    text-align: left;

    @include respond(tab-land) {
      font-size: 2rem;
    }
    @include respond(tab-port) {
      font-size: 2rem;
      text-align: center;
    }
    @include respond(phone) {
      font-size: 1.9rem;
      line-height: 1.5;
    }
    @include respond(phone-xs) {
      font-size: 1.8rem;
    }
  }

  .hero-cta {
    display: flex;

    @include respond(tab-port) {
      justify-content: center;
    }

    // & a {
    //   font-size: 2.4rem;

    //   @include respond(phone) {
    //     font-size: 2rem;
    //   }
    // }
  }
  #videoBG {
    z-index: -1;
  }
}

